[package]
name = "xck"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "xck"
path = "src/lib.rs"

[[bin]]
name = "xck"
path = "src/app/main.rs"

[dependencies]

#rust-random/rand/
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core="0.5.0"

#rust-lang/flate2-rs/
flate2 = "1.0.26"

#RustCrypto/traits/
aead = "0.5.2"

#RustCrypto/AEADs/
chacha20poly1305 = "0.10.1"
aes-gcm = "0.10.2"

#RustCrypto/formats/
base64ct = "1.6.0"

#BLAKE3-team/BLAKE3/
blake3 = "1.3.3"

#RustCrypto/hashes/
sha2 = "0.10.6"

#
ed25519-dalek = "1.0.1"

#RustCrypto/rsa/
#rsa = "0.9.2"

#clap-rs/clap/
clap = {version="4.3.8" ,features=["derive","env"]}