[package]
name = "xck"
version = "0.0.1"
edition = "2021"

[lib]
name = "xck"
path = "src/lib.rs"

[[bin]]
name = "xck"
path = "src/app/main.rs"
required-features = ["alloc"]

[dependencies]

#https://github.com/rust-random/
rand = "0.8.5"
rand_chacha = "0.3.1"

#https://github.com/RustCrypto/traits/
aead = "0.5.2"

#https://github.com/RustCrypto/AEADs/
chacha20poly1305 = "0.10.1"
aes-gcm = "0.10.2"

#https://github.com/dalek-cryptography/ed25519-dalek/
ed25519-dalek = {version="2.0.0-rc.3" , features=["rand_core"]}

#https://github.com/dalek-cryptography/x25519-dalek/
x25519-dalek = {version="2.0.0-rc.3" , features=["static_secrets"]}

#https://github.com/BLAKE3-team/BLAKE3/
blake3 = "1.3.3"

#https://github.com/RustCrypto/hashes/
sha2 = "0.10.6"
argon2 = "0.5.1"

#https://github.com/RustCrypto/formats/
base64ct = "1.6.0"
#pkcs8 = "0.10.2"
#der = "0.7.7"
pem-rfc7468 = "0.7.0"

#https://github.com/clap-rs/clap/
clap = {version="4.3.8" ,features=["derive","env"]}

[features]
#lower = []
#std = []
alloc = []
